--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -50,18 +50,22 @@
                 {#  #}
             </div>
             <div class="col">
+             {% set a=ad.author  %}
                 <div class="row">
-                    <div class="col-4">
-                        <img src="http://placehold.it/64x64" alt="Avatar de Joseph">
+                   
+                    <div class="col-3">
+                        <a href="{{ path('user_show',{'slug':a.slug}) }}">
+                            <img src="{{ a.picture }}" class="avatar avatar-medium" alt="Avatar de {{ a.fullName }} ">
+                        </a>
                     </div>
                     <div class="col">
-                        <h3>Joseph Dupont</h3>
-                        <span class="badge badge-primary">3 annonces</span>
+                        <a href="{{ path('user_show',{'slug':a.slug}) }}">
+                            <h3> {{ a.fullName }}</h3>
+                        </a>
+                        <span class="badge badge-primary">{{ a.ads | length }} annonces</span>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et maiores possimus accusamus quidem temporibus autem unde veniam cumque libero blanditiis!</p>
-                <p>Odit id pariatur saepe ad recusandae natus dolorem quia sit cumque dignissimos, dolores suscipit temporibus aspernatur ex vitae sed dolore!</p>
-                <p>Quia corrupti voluptate rem quas nemo voluptatum fugit nesciunt repellat. Adipisci, cupiditate maiores doloremque delectus quo vel accusamus reprehenderit deserunt!</p>
+                {{a.description | raw }}
             </div>
         </div>
     </div>
