--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -13,6 +13,10 @@
             <h4 class="card-title"><a href="{{ url }}">{{ ad.title }}</a></h4>
             <p class="card-text">{{ ad.introduction }}</p>
             <a href="{{ url }}" class="btn btn-secondary">En savoir plus !</a>
+            {# si l'utilisateur est connecté et que l'annonce lui appartient on affiche le button modifier #}
+            {% if app.user and app.user==ad.author %}
+                <a href="{{ path('ads_edit',{'slug':ad.slug}) }}" class="btn btn-secondary">Modifier !</a>
+            {% endif %}
         </div>
     </div>
 </div>
