--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -13,6 +13,13 @@
                 <strong>{{ ad.rooms }} chambres </strong> pour <strong> {{ ad.price }}&euro;</strong> par nuit
             </p>
             <a href="#" class="btn btn-primary">Réserver !</a>
+            {# si l'utilisateur est connecté et que l'annonce lui appartient on affiche le button modifier #}
+            {% if app.user and app.user==ad.author %}
+                {# affichage du button de modification #}
+                <a href="{{ path('ads_edit',{'slug':ad.slug}) }}" class="btn btn-secondary">Modifier !</a>
+                {# affichage du boutton de suppression #}
+                <a href="{{ path('ads_delete',{'slug':ad.slug}) }}" onclick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {ad.getTitle} ?`)" class="btn btn-danger">Supprimer l'annonce</a>
+            {% endif %}
         </div>
     </div>
 
